fixed navbar on mobile styling in CSS, both desktop and mobile should be working now

--- a/styles/style.css
+++ b/styles/style.css
@@ -194,7 +194,7 @@ table {
   .toggle-nav {
     display:         inline-block;
     padding:         0 10px 2px 10px;
-    margin:          -8px 0 -4px 0;
+    margin:          -36px 0 -8px 0;
     color:         rgb(143, 143, 143);    
     font-size:       24px;
   }
@@ -205,16 +205,22 @@ table {
 
   #logo.responsive {
     justify-content: center!important;
-    margin:          -16px 0 0 0!important;
+    margin:          -16px 0 -32px 0!important;
     transition:      .3s all ease-in-out;
     -moz-webkit-transition: .3s all ease-in-out;
     -ms-webkit-transition: .3s all ease-in-out;
     -o-webkit-transition: .3s all ease-in-out;
   }
 
+  #logotag.active {
+    display:         flex;
+    justify-content: center;
+    margin:          20px 0 40px 0!important;
+  }
+
   #logo.responsive.active {
     justify-content: center!important;
-    padding:         104px 0 0 0;
+    padding:         100px 0 0 0;
     transition:      .3s all ease-in-out;
     -moz-webkit-transition: .3s all ease-in-out;
     -ms-webkit-transition: .3s all ease-in-out;
@@ -224,11 +230,11 @@ table {
   #logotag {
     display:         flex;
     justify-content: center;
-    margin:          -4px 0 12px 0;
+    margin:          24px 0 40px 0!important;
   }
 
   ul#navbar{
-    padding:         8px 0 4px 0;
+    padding:         36px 0 4px 0;
   }
 }
  
